# embit

./: .gitignore  .pre-commit-config.yaml  README.md  _typos.toml  pyproject.toml
.github/workflows/: code-quality.yml  conventional-commits.yml  tests.yml
docs/: _sidebar.md
docs/api/: README.md  _sidebar.md  bip32.md  hashes.md
docs/api/ec/: README.md  _sidebar.md  public_key.md  schnorr_sig.md  signature.md
examples/: change.py  explorer.py
src/embit/: base.py  base58.py  bech32.py  bip32.py  bip39.py  bip85.py  compact.py  ec.py  finalizer.py  misc.py  networks.py  psbt.py  psbtview.py  script.py  slip39.py  transaction.py
src/embit/descriptor/: __init__.py  arguments.py  base.py  checksum.py  descriptor.py  miniscript.py  taptree.py
src/embit/liquid/: addresses.py  blip32.py  descriptor.py  finalizer.py  networks.py  pset.py  psetview.py  slip77.py  transaction.py
src/embit/util/: ctypes_secp256k1.py  key.py  py_ripemd160.py  py_secp256k1.py
src/embit/wordlists/: base.py  ubip39.py  uslip39.py
tests/: run.sh  run_tests.py  unittest.py
tests/integration/: daemon-versions.env  run_tests.py
tests/integration/tests/: test_psbt.py  test_pset.py
tests/integration/util/: bitcoin.py  liquid.py  rpc.py
tests/tests/: test_bech32.py  test_bip32.py  test_bip39.py  test_bip85.py  test_descriptor.py  test_taproot.py
