[tool.poetry]
name = "embit"
version = "0.8.0"
description = "A minimal bitcoin library for MicroPython and Python3 with a focus on embedded systems."
authors = ["Stepan Snigirev <snigirev.stepan@gmail.com>"]
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [{ include = "embit", from = "src" }]

[tool.poetry.urls]
repository = "https://github.com/diybitcoinhardware/embit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.10"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
black = "*"
pre-commit = "*"
mkdocs = "*"
mkdocs-material = "*"
mkdocstrings = { version = "*", extras = ["python"] }
isort = "*"
pylint = "*"
shellcheck-py = "^0.11.0.1"
requests = "^2.33.1"

[tool.pytest.ini_options]
addopts = "--cov=embit"
testpaths = [
    "tests/tests",
]

[tool.coverage.run]
omit = [
    "*/liquid/*",
]

[tool.black]
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
src_paths = ["src"]
known_first_party = ["embit"]

[tool.pylint.main]
init-hook = "import sys; sys.path.insert(0, 'src')"

[tool.pylint."messages control"]
# micropython / secp256k1 / uembit are optional or platform-specific imports.
disable = ["import-error"]

[tool.pylint.TYPECHECK]
generated-members = [
    "^\\.Miniscript\\.(inner_compile|PROPS|TYPE)$",
]
